# supersayan

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SACS_Lab_Presentation.md  TIMING_BENCHMARKS.md  pyproject.toml  requirements.txt  setup.py  t.py
benchmarks/: README.md  gpu_vs_cpu.py  test_benchmark_comparison.py  test_benchmark_conv2d.py  test_benchmark_conv2d_large.py  test_benchmark_conv2d_orion.py  test_benchmark_linear.py
docs/: client_server_architecture.md  client_server_testing.md  logging.md
examples/: weight_preservation_example.py
models/: mnist_cnn.pt
scripts/: debug_resnet.py  profile.html  profile.json  run_client.py  run_server.py  test_client.py  test_timing.py  timing_example.py
src/supersayan/: __init__.py  _setup.py  logging_config.py
src/supersayan/core/: __init__.py  bindings.py  encryption.py  keygen.py  operations.py  timing.py  types.py
src/supersayan/julia_backend/: CondaPkg.toml  Manifest.toml  Project.toml  SupersayanTFHE.jl  __init__.py
src/supersayan/julia_backend/.CondaPkg/: meta  pixi.toml
src/supersayan/julia_backend/src/: Constants.jl  Encryption.jl  Operations.jl  SupersayanTFHE.jl  Types.jl
src/supersayan/julia_backend/src/layers/: Conv2d.jl  Conv2dOrion.jl  GELU.jl  Layers.jl  Linear.jl
src/supersayan/nn/: __init__.py  convert.py
src/supersayan/nn/layers/: __init__.py  conv2d.py  conv2d_orion.py  gelu.py  linear.py
src/supersayan/remote/: __init__.py  chunking.py  client.py  deployment.py  serialization.py  server.py  socket_utils.py
tests/: README.md  test_client_server.py  test_conv2d.py  test_conv2d_orion.py  test_encryption.py  test_hybrid_house_price.py  test_model_conversion.py  test_mult_dot_operations.py  test_operations.py  test_perceptron.py  test_verify_correctness.py
tests/encryption/: test_encryption_cpu.py  test_encryption_gpu.py
tests/layers/: test_conv2d.py  test_linear.py
tests/operations/: test_add_operations.py  test_mult_dot_operations.py
tests/types/: test_arrays_cpu.py  test_arrays_gpu.py
